# misp-feedback

./: CLAUDE.md  Cargo.toml  LICENSE  PRODUCT.md  README.md  REQUIREMENTS.md  config.toml  config.toml.example
.github/workflows/: ci.yml
misp-fb/: Cargo.toml
misp-fb-core/: Cargo.toml
misp-fb-core/src/: config.rs  engine.rs  error.rs  lib.rs  loader.rs  model.rs  protocol.rs
misp-fb-core/src/matchers/: cidr.rs  hostname.rs  mod.rs  regex_matcher.rs  string.rs  substring.rs
misp-fb/src/: client.rs  configure.rs  daemon.rs  main.rs
misp-fbd/: Cargo.toml  index.html  openapi.json  swagger-ui.html
misp-fbd/src/: api.rs  main.rs  reload.rs  state.rs
misp-fbd/tests/: bench_lookups.rs
