[package]
name = "misp-fb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ipnet = "2"
aho-corasick = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
