[package]
name = "misp-fb"
version = "0.1.0"
edition = "2021"

[dependencies]
misp-fb-core = { path = "../misp-fb-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
tower = "0.5"
dialoguer = "0.11"
toml = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
