[package]
name = "misp-fbd"
version = "0.1.0"
edition = "2021"

[dependencies]
misp-fb-core = { path = "../misp-fb-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
notify = "7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tempfile = "3"
